--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ openai==1.6.0
 markdown==3.5
 numpy==1.24.0
 python-dotenv==1.0.0
+langchain==0.1.0
+langchain-openai==0.0.2
+faiss-cpu==1.7.4
+unstructured==0.10.18
+unstructured-markdown==0.1.1
+tiktoken==0.5.1
